SF-2789 Fix paratext login button content misaligned

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
@@ -30,9 +30,7 @@
       height: 40px;
 
       .paratext-logo {
-        width: 24px;
-        height: 24px;
-        margin-right: 8px;
+        width: 100%;
       }
     }
   }
